# Canonical-TIA-Agent-Core

./: COMMERCIAL_LICENSE.md  LICENSE-AGPLv3.md  NOTICE.md  README.md  mock_benchmark_report.json  pyproject.toml
docs/: ARCHITECTURE.md  FORMALISM.md
scripts/: run_mock_benchmark.py
src/canonical_tia_core/: __init__.py  core.py  metrics.py  state.py
src/canonical_tia_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/canonical_tia_core/benchmarks/: __init__.py  interface_battery.py
src/canonical_tia_core/examples/: __init__.py  mock_agents.py
tests/: test_benchmark.py
